# ragcli

./: .gitignore  README.md  pyproject.toml
ragcli/: __init__.py  answer.py  cli.py  embeddings.py  loader.py  store.py
