[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragcli"
version = "0.1.0"
description = "Ask questions about your documents from the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pavan Kumar Dhruv", email = "pavankumardhruv@gmail.com" },
]
keywords = ["rag", "cli", "embeddings", "llm", "document-qa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "anthropic>=0.39.0",
    "pypdf>=3.0.0",
]

[project.scripts]
ragcli = "ragcli.cli:app"

[project.urls]
Homepage = "https://github.com/Pavankumardhruv/ragcli"
Repository = "https://github.com/Pavankumardhruv/ragcli"
Issues = "https://github.com/Pavankumardhruv/ragcli/issues"
